# Air-Guesser

./: FilteredData.txt  classes.py  data.txt  happening.py  index.html  main.py  processing.js  pyproject.toml  styleSheet.css
Air_Guesser/Frontend/: AJAX.js  index.html  processing.js  styleSheet.css
Air_Guesser/backend/: classes.py  data.txt  happening.py  main.py
Frontend/: classes.py  index.html  main.py  processing.js  styleSheet.css
backend/: classes.py  data.txt  happening.py  main.py
