[tool.poetry]
name = "repl_python3_Air-Guesser"
version = "0.1.0"
description = ""
authors = ["CheezItMasterRace <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
apify-client = "^0.5.0"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
